# jaffarCommon

./: .clang-format  .fix-style.sh  LICENSE  README.md  gcovr.cfg  meson.build  meson_options.txt
.build-tools/: .gitignore  check-style.sh
.github/workflows/: make.yml
docs/: Doxyfile
include/: bitwise.hpp  concurrent.hpp  definitions.hpp  diff.hpp  exceptions.hpp  file.hpp  hash.hpp  json.hpp  logger.hpp  phmap.hpp  string.hpp  timing.hpp
include/deserializers/: base.hpp  contiguous.hpp  differential.hpp
include/jaffarCommon/: bitwise.hpp  concurrent.hpp  dethreader.hpp  exceptions.hpp  file.hpp  hash.hpp  json.hpp  logger.hpp  parallel.hpp  sequenceTrie.hpp  string.hpp  timing.hpp
include/jaffarCommon/deserializers/: base.hpp  contiguous.hpp  differential.hpp
include/jaffarCommon/loggers/: ncurses.hpp  stdio.hpp
include/jaffarCommon/serializers/: base.hpp  contiguous.hpp  differential.hpp
include/loggers/: stdio.hpp
include/serializers/: base.hpp  contiguous.hpp  differential.hpp
subprojects/SDL2_TTF/: meson.build
subprojects/SDL2_ttf-2.24.0/: meson.build
subprojects/ffmpeg/: Makefile  config.h  linux_x86-64.sh  meson.build
subprojects/ffmpeg/libavfilter/: allfilters.c
subprojects/ffmpeg/libavutil/: ffversion.h
subprojects/zlib/: meson.build
tests/: bitwise.cpp  concurrent.cpp  dethreader.cpp  exceptions.cpp  ffmpeg.cpp  file.cpp  hash.cpp  includes.cpp  json.cpp  loggerNCurses.cpp  loggerStdio.cpp  meson.build  sequenceTrie.cpp  serialization.cpp  string.cpp  timing.cpp
