option('testLoggers',
  type : 'boolean',
  value : false,
  description : 'Enable logger testing (only for interactive shells, not CI)',
  yield: true
)

option('includeFFmpeg',
  type : 'boolean',
  value : false,
  description : 'Indicates whether to build ffmpeg',
  yield: true
)

option('includeZlib',
  type : 'boolean',
  value : false,
  description : 'Indicates whether to build zlib',
  yield: true
)