project('ffmpeg','c',
  version: '1.0.0',
  default_options : [ 'default_library=static', 'buildtype=release'],
)

# FFmpeg Core sources

ffmpegSrc =  [
  'libavformat/avio.c',
  'libavformat/aviobuf.c',
  'libavformat/avlanguage.c',
  'libavformat/cutils.c',
  'libavformat/dump.c',
  'libavformat/file.c',
  'libavformat/format.c',
  'libavformat/h263dec.c',
  'libavformat/h264dec.c',
  'libavformat/id3v1.c',
  'libavformat/id3v2.c',
  'libavformat/img2.c',
  'libavformat/isom.c',
  'libavformat/m4vdec.c',
  'libavformat/metadata.c',
  'libavformat/mp3dec.c',
  'libavformat/mpeg.c',
  'libavformat/mpegtsenc.c',
  'libavformat/mpegvideodec.c',
  'libavformat/mux.c',
  'libavformat/oma.c',
  'libavformat/omadec.c',
  'libavformat/options.c',
  'libavformat/os_support.c',
  'libavformat/pcm.c',
  'libavformat/pcmdec.c',
  'libavformat/pmpdec.c',
  'libavformat/qtpalette.c',
  'libavformat/rawdec.c',
  'libavformat/replaygain.c',
  'libavformat/riff.c',
  'libavformat/riffdec.c',
  'libavformat/riffenc.c',
  'libavformat/sdp.c',
  'libavformat/url.c',
  'libavformat/utils.c',
  'libavformat/wavdec.c',
  'libavcodec/aac_ac3_parser.c',
  'libavcodec/aac_parser.c',
  'libavcodec/aacadtsdec.c',
  'libavcodec/aacdec.c',
  'libavcodec/aacps_float.c',
  'libavcodec/aacpsdsp_float.c',
  'libavcodec/aacsbr.c',
  'libavcodec/aactab.c',
  'libavcodec/aandcttab.c',
  'libavcodec/allcodecs.c',
  'libavcodec/atrac.c',
  'libavcodec/atrac3.c',
  'libavcodec/atrac3plus.c',
  'libavcodec/atrac3plusdec.c',
  'libavcodec/atrac3plusdsp.c',
  'libavcodec/audioconvert.c',
  'libavcodec/avdct.c',
  'libavcodec/avfft.c',
  'libavcodec/avpacket.c',
  'libavcodec/avpicture.c',
  'libavcodec/bitstream.c',
  'libavcodec/bitstream_filter.c',
  'libavcodec/blockdsp.c',
  'libavcodec/bswapdsp.c',
  'libavcodec/cabac.c',
  'libavcodec/codec_desc.c',
  'libavcodec/d3d11va.c',
  'libavcodec/dct.c',
  'libavcodec/dct32_fixed.c',
  'libavcodec/dct32_float.c',
  'libavcodec/dirac.c',
  'libavcodec/dv_profile.c',
  'libavcodec/error_resilience.c',
  'libavcodec/exif.c',
  'libavcodec/faandct.c',
  'libavcodec/faanidct.c',
  'libavcodec/fdctdsp.c',
  'libavcodec/fft_fixed.c',
  'libavcodec/fft_fixed_32.c',
  'libavcodec/fft_float.c',
  'libavcodec/fft_init_table.c',
  'libavcodec/ffv1.c',
  'libavcodec/ffv1enc.c',
  'libavcodec/flvdec.c',
  'libavcodec/flvenc.c',
  'libavcodec/frame_thread_encoder.c',
  'libavcodec/golomb.c',
  'libavcodec/h263.c',
  'libavcodec/h263_parser.c',
  'libavcodec/h263data.c',
  'libavcodec/h263dec.c',
  'libavcodec/h263dsp.c',
  'libavcodec/h264.c',
  'libavcodec/h264_cabac.c',
  'libavcodec/h264_cavlc.c',
  'libavcodec/h264_direct.c',
  'libavcodec/h264_loopfilter.c',
  'libavcodec/h264_mb.c',
  'libavcodec/h264_parser.c',
  'libavcodec/h264_picture.c',
  'libavcodec/h264_ps.c',
  'libavcodec/h264_refs.c',
  'libavcodec/h264_sei.c',
  'libavcodec/h264_slice.c',
  'libavcodec/h264chroma.c',
  'libavcodec/h264dsp.c',
  'libavcodec/h264idct.c',
  'libavcodec/h264pred.c',
  'libavcodec/h264qpel.c',
  'libavcodec/hpeldsp.c',
  'libavcodec/huffman.c',
  'libavcodec/huffyuv.c',
  'libavcodec/huffyuvenc.c',
  'libavcodec/huffyuvencdsp.c',
  'libavcodec/idctdsp.c',
  'libavcodec/imdct15.c',
  'libavcodec/imgconvert.c',
  'libavcodec/intelh263dec.c',
  'libavcodec/ituh263dec.c',
  'libavcodec/ituh263enc.c',
  'libavcodec/jfdctfst.c',
  'libavcodec/jfdctint.c',
  'libavcodec/jpegtables.c',
  'libavcodec/jrevdct.c',
  'libavcodec/kbdwin.c',
  'libavcodec/latm_parser.c',
  'libavcodec/lossless_videodsp.c',
  'libavcodec/mathtables.c',
  'libavcodec/mdct_fixed.c',
  'libavcodec/mdct_fixed_32.c',
  'libavcodec/mdct_float.c',
  'libavcodec/me_cmp.c',
  'libavcodec/mjpegbdec.c',
  'libavcodec/mjpegdec.c',
  'libavcodec/motion_est.c',
  'libavcodec/mpeg12.c',
  'libavcodec/mpeg12data.c',
  'libavcodec/mpeg12dec.c',
  'libavcodec/mpeg4audio.c',
  'libavcodec/mpeg4video.c',
  'libavcodec/mpeg4video_parser.c',
  'libavcodec/mpeg4videodec.c',
  'libavcodec/mpeg4videoenc.c',
  'libavcodec/mpeg_er.c',
  'libavcodec/mpegaudio.c',
  'libavcodec/mpegaudio_parser.c',
  'libavcodec/mpegaudiodata.c',
  'libavcodec/mpegaudiodec_fixed.c',
  'libavcodec/mpegaudiodecheader.c',
  'libavcodec/mpegaudiodsp.c',
  'libavcodec/mpegaudiodsp_data.c',
  'libavcodec/mpegaudiodsp_fixed.c',
  'libavcodec/mpegaudiodsp_float.c',
  'libavcodec/mpegpicture.c',
  'libavcodec/mpegutils.c',
  'libavcodec/mpegvideo.c',
  'libavcodec/mpegvideo_enc.c',
  'libavcodec/mpegvideo_motion.c',
  'libavcodec/mpegvideo_parser.c',
  'libavcodec/mpegvideodata.c',
  'libavcodec/mpegvideodsp.c',
  'libavcodec/mpegvideoencdsp.c',
  'libavcodec/options.c',
  'libavcodec/parser.c',
  'libavcodec/pcm.c',
  'libavcodec/pixblockdsp.c',
  'libavcodec/profiles.c',
  'libavcodec/pthread.c',
  'libavcodec/pthread_frame.c',
  'libavcodec/pthread_slice.c',
  'libavcodec/qpeldsp.c',
  'libavcodec/qsv_api.c',
  'libavcodec/rangecoder.c',
  'libavcodec/ratecontrol.c',
  'libavcodec/raw.c',
  'libavcodec/rdft.c',
  'libavcodec/resample.c',
  'libavcodec/resample2.c',
  'libavcodec/rl.c',
  'libavcodec/sbrdsp.c',
  'libavcodec/simple_idct.c',
  'libavcodec/sinewin.c',
  'libavcodec/sinewin_fixed.c',
  'libavcodec/startcode.c',
  'libavcodec/tiff_common.c',
  'libavcodec/utils.c',
  'libavcodec/videodsp.c',
  'libavcodec/vorbis_parser.c',
  'libavcodec/x86/aacpsdsp_init.c',
  'libavcodec/x86/blockdsp_init.c',
  'libavcodec/x86/bswapdsp_init.c',
  'libavcodec/x86/constants.c',
  'libavcodec/x86/dct_init.c',
  'libavcodec/x86/fdct.c',
  'libavcodec/x86/fdctdsp_init.c',
  'libavcodec/x86/fft_init.c',
  'libavcodec/x86/h263dsp_init.c',
  'libavcodec/x86/h264_intrapred_init.c',
  'libavcodec/x86/h264_qpel.c',
  'libavcodec/x86/h264chroma_init.c',
  'libavcodec/x86/h264dsp_init.c',
  'libavcodec/x86/hpeldsp_init.c',
  'libavcodec/x86/huffyuvencdsp_mmx.c',
  'libavcodec/x86/idctdsp_init.c',
  'libavcodec/x86/lossless_videodsp_init.c',
  'libavcodec/x86/me_cmp_init.c',
  'libavcodec/x86/mpegaudiodsp.c',
  'libavcodec/x86/mpegvideo.c',
  'libavcodec/x86/mpegvideodsp.c',
  'libavcodec/x86/mpegvideoenc.c',
  'libavcodec/x86/mpegvideoencdsp_init.c',
  'libavcodec/x86/pixblockdsp_init.c',
  'libavcodec/x86/qpeldsp_init.c',
  'libavcodec/x86/sbrdsp_init.c',
  'libavcodec/x86/simple_idct.c',
  'libavcodec/x86/videodsp_init.c',
  'libavcodec/x86/xvididct_init.c',
  'libavcodec/xiph.c',
  'libavcodec/xvididct.c',
  'libswresample/audioconvert.c',
  'libswresample/dither.c',
  'libswresample/options.c',
  'libswresample/rematrix.c',
  'libswresample/resample.c',
  'libswresample/resample_dsp.c',
  'libswresample/swresample.c',
  'libswresample/swresample_frame.c',
  'libswresample/x86/audio_convert_init.c',
  'libswresample/x86/rematrix_init.c',
  'libswresample/x86/resample_init.c',
  'libswscale/alphablend.c',
  'libswscale/gamma.c',
  'libswscale/hscale.c',
  'libswscale/hscale_fast_bilinear.c',
  'libswscale/input.c',
  'libswscale/options.c',
  'libswscale/output.c',
  'libswscale/rgb2rgb.c',
  'libswscale/slice.c',
  'libswscale/swscale.c',
  'libswscale/swscale_unscaled.c',
  'libswscale/utils.c',
  'libswscale/vscale.c',
  'libswscale/x86/hscale_fast_bilinear_simd.c',
  'libswscale/x86/rgb2rgb.c',
  'libswscale/x86/swscale.c',
  'libswscale/x86/yuv2rgb.c',
  'libswscale/yuv2rgb.c',
  'libavutil/adler32.c',
  'libavutil/aes.c',
  'libavutil/aes_ctr.c',
  'libavutil/audio_fifo.c',
  'libavutil/avstring.c',
  'libavutil/base64.c',
  'libavutil/blowfish.c',
  'libavutil/bprint.c',
  'libavutil/buffer.c',
  'libavutil/camellia.c',
  'libavutil/cast5.c',
  'libavutil/channel_layout.c',
  'libavutil/color_utils.c',
  'libavutil/cpu.c',
  'libavutil/crc.c',
  'libavutil/des.c',
  'libavutil/dict.c',
  'libavutil/display.c',
  'libavutil/downmix_info.c',
  'libavutil/error.c',
  'libavutil/eval.c',
  'libavutil/fifo.c',
  'libavutil/file.c',
  'libavutil/file_open.c',
  'libavutil/fixed_dsp.c',
  'libavutil/float_dsp.c',
  'libavutil/frame.c',
  'libavutil/hash.c',
  'libavutil/hmac.c',
  'libavutil/imgutils.c',
  'libavutil/integer.c',
  'libavutil/intmath.c',
  'libavutil/lfg.c',
  'libavutil/lls.c',
  'libavutil/log.c',
  'libavutil/log2_tab.c',
  'libavutil/mastering_display_metadata.c',
  'libavutil/mathematics.c',
  'libavutil/md5.c',
  'libavutil/mem.c',
  'libavutil/murmur3.c',
  'libavutil/opt.c',
  'libavutil/parseutils.c',
  'libavutil/pixdesc.c',
  'libavutil/pixelutils.c',
  'libavutil/random_seed.c',
  'libavutil/rational.c',
  'libavutil/rc4.c',
  'libavutil/reverse.c',
  'libavutil/ripemd.c',
  'libavutil/samplefmt.c',
  'libavutil/sha.c',
  'libavutil/sha512.c',
  'libavutil/stereo3d.c',
  'libavutil/tea.c',
  'libavutil/threadmessage.c',
  'libavutil/time.c',
  'libavutil/timecode.c',
  'libavutil/tree.c',
  'libavutil/twofish.c',
  'libavutil/utils.c',
  'libavutil/x86/cpu.c',
  'libavutil/x86/fixed_dsp_init.c',
  'libavutil/x86/float_dsp_init.c',
  'libavutil/x86/lls_init.c',
  'libavutil/xga_font_data.c',
  'libavutil/xtea.c',
]

ffmpegIncludeDirs = [
  '.',
]

ffmpegCompileArgs = [
  '-D_ISOC99_SOURCE',
  '-D_FILE_OFFSET_BITS=64',
  '-D_LARGEFILE_SOURCE',
  '-D_POSIX_C_SOURCE=200112',
  '-D_XOPEN_SOURCE=600',
  '-DZLIB_CONST',
  '-DHAVE_AV_CONFIG_H',
  '-D__STDC_CONSTANT_MACROS',
  '-DPIC',
  '-fPIC'
]

# FFmpeg Dependency

 ffmpegDependency = declare_dependency(
  compile_args        : [  ffmpegCompileArgs ],
  link_args           : [  ],
  include_directories : include_directories(ffmpegIncludeDirs),
  sources             : [ ffmpegSrc ],
  dependencies        : [  
                        ]
 )

# Library

ffmpegLibrary = library('ffmpeg', dependencies: [ ffmpegDependency] )