project('ffmpeg','c',
  version: '1.0.0',
  default_options : [ 'default_library=static', 'buildtype=release'],
)

# FFmpeg Core sources

ffmpegSrc =  [
  'cmdutils.c',
  'ffmpeg.c',
  'ffmpeg_filter.c',
  'ffmpeg_opt.c',
  'ffprobe.c',
  'libavfilter/buffersrc.c',
  'libavfilter/aeval.c',
  'libavfilter/af_adelay.c',
  'libavfilter/af_aecho.c',
  'libavfilter/af_aemphasis.c',
  'libavfilter/af_afade.c',
  'libavfilter/af_afftfilt.c',
  'libavfilter/af_aformat.c',
  'libavfilter/af_agate.c',
  'libavfilter/af_alimiter.c',
  'libavfilter/af_amerge.c',
  'libavfilter/af_amix.c',
  'libavfilter/af_anequalizer.c',
  'libavfilter/af_anull.c',
  'libavfilter/af_apad.c',
  'libavfilter/af_aphaser.c',
  'libavfilter/af_apulsator.c',
  'libavfilter/af_aresample.c',
  'libavfilter/af_asetnsamples.c',
  'libavfilter/af_asetrate.c',
  'libavfilter/af_ashowinfo.c',
  'libavfilter/af_astats.c',
  'libavfilter/af_asyncts.c',
  'libavfilter/af_atempo.c',
  'libavfilter/af_biquads.c',
  'libavfilter/af_channelmap.c',
  'libavfilter/af_channelsplit.c',
  'libavfilter/af_chorus.c',
  'libavfilter/af_compand.c',
  'libavfilter/af_compensationdelay.c',
  'libavfilter/af_dcshift.c',
  'libavfilter/af_dynaudnorm.c',
  'libavfilter/af_earwax.c',
  'libavfilter/af_extrastereo.c',
  'libavfilter/af_flanger.c',
  'libavfilter/af_join.c',
  'libavfilter/af_pan.c',
  'libavfilter/af_replaygain.c',
  'libavfilter/af_resample.c',
  'libavfilter/af_sidechaincompress.c',
  'libavfilter/af_silencedetect.c',
  'libavfilter/af_silenceremove.c',
  'libavfilter/af_stereotools.c',
  'libavfilter/af_stereowiden.c',
  'libavfilter/af_tremolo.c',
  'libavfilter/af_vibrato.c',
  'libavfilter/af_volume.c',
  'libavfilter/af_volumedetect.c',
  'libavfilter/allfilters.c',
  'libavfilter/asink_anullsink.c',
  'libavfilter/asrc_anoisesrc.c',
  'libavfilter/asrc_anullsrc.c',
  'libavfilter/asrc_sine.c',
  'libavfilter/audio.c',
  'libavfilter/avf_ahistogram.c',
  'libavfilter/avf_aphasemeter.c',
  'libavfilter/avf_avectorscope.c',
  'libavfilter/avf_concat.c',
  'libavfilter/avf_showcqt.c',
  'libavfilter/avf_showfreqs.c',
  'libavfilter/avf_showspectrum.c',
  'libavfilter/avf_showvolume.c',
  'libavfilter/avf_showwaves.c',
  'libavfilter/avfilter.c',
  'libavfilter/avfiltergraph.c',
  'libavfilter/bbox.c',
  'libavfilter/buffersink.c',
  'libavfilter/buffersrc.c',
  'libavfilter/drawutils.c',
  'libavfilter/dualinput.c',
  'libavfilter/f_drawgraph.c',
  'libavfilter/f_ebur128.c',
  'libavfilter/f_interleave.c',
  'libavfilter/f_metadata.c',
  'libavfilter/f_perms.c',
  'libavfilter/f_realtime.c',
  'libavfilter/f_reverse.c',
  'libavfilter/f_select.c',
  'libavfilter/f_sendcmd.c',
  'libavfilter/f_streamselect.c',
  'libavfilter/fifo.c',
  'libavfilter/filtfmts.c',
  'libavfilter/formats.c',
  'libavfilter/framepool.c',
  'libavfilter/framesync.c',
  'libavfilter/generate_wave_table.c',
  'libavfilter/graphdump.c',
  'libavfilter/graphparser.c',
  'libavfilter/lavfutils.c',
  'libavfilter/log2_tab.c',
  'libavfilter/lswsutils.c',
  'libavfilter/pthread.c',
  'libavfilter/setpts.c',
  'libavfilter/settb.c',
  'libavfilter/split.c',
  'libavfilter/src_movie.c',
  'libavfilter/transform.c',
  'libavfilter/trim.c',
  'libavfilter/vaf_spectrumsynth.c',
  'libavfilter/vf_alphamerge.c',
  'libavfilter/vf_aspect.c',
  'libavfilter/vf_atadenoise.c',
  'libavfilter/vf_bbox.c',
  'libavfilter/vf_blackdetect.c',
  'libavfilter/vf_blackframe.c',
  'libavfilter/vf_blend.c',
  'libavfilter/vf_boxblur.c',
  'libavfilter/vf_chromakey.c',
  'libavfilter/vf_codecview.c',
  'libavfilter/vf_colorbalance.c',
  'libavfilter/vf_colorchannelmixer.c',
  'libavfilter/vf_colorkey.c',
  'libavfilter/vf_colorlevels.c',
  'libavfilter/vf_colormatrix.c',
  'libavfilter/vf_convolution.c',
  'libavfilter/vf_copy.c',
  'libavfilter/vf_cover_rect.c',
  'libavfilter/vf_crop.c',
  'libavfilter/vf_cropdetect.c',
  'libavfilter/vf_curves.c',
  'libavfilter/vf_dctdnoiz.c',
  'libavfilter/vf_deband.c',
  'libavfilter/vf_decimate.c',
  'libavfilter/vf_dejudder.c',
  'libavfilter/vf_delogo.c',
  'libavfilter/vf_deshake.c',
  'libavfilter/vf_detelecine.c',
  'libavfilter/vf_displace.c',
  'libavfilter/vf_drawbox.c',
  'libavfilter/vf_edgedetect.c',
  'libavfilter/vf_elbg.c',
  'libavfilter/vf_eq.c',
  'libavfilter/vf_extractplanes.c',
  'libavfilter/vf_fade.c',
  'libavfilter/vf_fftfilt.c',
  'libavfilter/vf_field.c',
  'libavfilter/vf_fieldmatch.c',
  'libavfilter/vf_fieldorder.c',
  'libavfilter/vf_find_rect.c',
  'libavfilter/vf_format.c',
  'libavfilter/vf_fps.c',
  'libavfilter/vf_framepack.c',
  'libavfilter/vf_framerate.c',
  'libavfilter/vf_framestep.c',
  'libavfilter/vf_fspp.c',
  'libavfilter/vf_geq.c',
  'libavfilter/vf_gradfun.c',
  'libavfilter/vf_hflip.c',
  'libavfilter/vf_histeq.c',
  'libavfilter/vf_histogram.c',
  'libavfilter/vf_hqdn3d.c',
  'libavfilter/vf_hqx.c',
  'libavfilter/vf_hue.c',
  'libavfilter/vf_idet.c',
  'libavfilter/vf_il.c',
  'libavfilter/vf_interlace.c',
  'libavfilter/vf_kerndeint.c',
  'libavfilter/vf_lenscorrection.c',
  'libavfilter/vf_lut.c',
  'libavfilter/vf_lut3d.c',
  'libavfilter/vf_maskedmerge.c',
  'libavfilter/vf_mcdeint.c',
  'libavfilter/vf_mergeplanes.c',
  'libavfilter/vf_mpdecimate.c',
  'libavfilter/vf_neighbor.c',
  'libavfilter/vf_nnedi.c',
  'libavfilter/vf_noise.c',
  'libavfilter/vf_null.c',
  'libavfilter/vf_overlay.c',
  'libavfilter/vf_owdenoise.c',
  'libavfilter/vf_pad.c',
  'libavfilter/vf_palettegen.c',
  'libavfilter/vf_paletteuse.c',
  'libavfilter/vf_perspective.c',
  'libavfilter/vf_phase.c',
  'libavfilter/vf_pixdesctest.c',
  'libavfilter/vf_pp.c',
  'libavfilter/vf_pp7.c',
  'libavfilter/vf_psnr.c',
  'libavfilter/vf_pullup.c',
  'libavfilter/vf_qp.c',
  'libavfilter/vf_random.c',
  'libavfilter/vf_removegrain.c',
  'libavfilter/vf_removelogo.c',
  'libavfilter/vf_repeatfields.c',
  'libavfilter/vf_rotate.c',
  'libavfilter/vf_sab.c',
  'libavfilter/vf_scale.c',
  'libavfilter/vf_selectivecolor.c',
  'libavfilter/vf_separatefields.c',
  'libavfilter/vf_setfield.c',
  'libavfilter/vf_showinfo.c',
  'libavfilter/vf_showpalette.c',
  'libavfilter/vf_shuffleframes.c',
  'libavfilter/vf_shuffleplanes.c',
  'libavfilter/vf_signalstats.c',
  'libavfilter/vf_smartblur.c',
  'libavfilter/vf_spp.c',
  'libavfilter/vf_ssim.c',
  'libavfilter/vf_stack.c',
  'libavfilter/vf_stereo3d.c',
  'libavfilter/vf_super2xsai.c',
  'libavfilter/vf_swaprect.c',
  'libavfilter/vf_swapuv.c',
  'libavfilter/vf_telecine.c',
  'libavfilter/vf_thumbnail.c',
  'libavfilter/vf_tile.c',
  'libavfilter/vf_tinterlace.c',
  'libavfilter/vf_transpose.c',
  'libavfilter/vf_unsharp.c',
  'libavfilter/vf_uspp.c',
  'libavfilter/vf_vectorscope.c',
  'libavfilter/vf_vflip.c',
  'libavfilter/vf_vignette.c',
  'libavfilter/vf_w3fdif.c',
  'libavfilter/vf_waveform.c',
  'libavfilter/vf_xbr.c',
  'libavfilter/vf_yadif.c',
  'libavfilter/vf_zoompan.c',
  'libavfilter/video.c',
  'libavfilter/vsink_nullsink.c',
  'libavfilter/vsrc_cellauto.c',
  'libavfilter/vsrc_life.c',
  'libavfilter/vsrc_mandelbrot.c',
  'libavfilter/vsrc_mptestsrc.c',
  'libavfilter/vsrc_testsrc.c',
  'libavfilter/window_func.c',
  'libavformat/avio.c',
  'libavformat/aviobuf.c',
  'libavformat/avlanguage.c',
  'libavformat/cutils.c',
  'libavformat/dump.c',
  'libavformat/file.c',
  'libavformat/format.c',
  'libavformat/h263dec.c',
  'libavformat/h264dec.c',
  'libavformat/id3v1.c',
  'libavformat/id3v2.c',
  'libavformat/img2.c',
  'libavformat/isom.c',
  'libavformat/m4vdec.c',
  'libavformat/metadata.c',
  'libavformat/mp3dec.c',
  'libavformat/mpeg.c',
  'libavformat/mpegtsenc.c',
  'libavformat/mpegvideodec.c',
  'libavformat/mux.c',
  'libavformat/oma.c',
  'libavformat/omadec.c',
  'libavformat/options.c',
  'libavformat/os_support.c',
  'libavformat/pcm.c',
  'libavformat/pcmdec.c',
  'libavformat/pmpdec.c',
  'libavformat/qtpalette.c',
  'libavformat/rawdec.c',
  'libavformat/replaygain.c',
  'libavformat/riff.c',
  'libavformat/riffdec.c',
  'libavformat/riffenc.c',
  'libavformat/sdp.c',
  'libavformat/url.c',
  'libavformat/utils.c',
  'libavformat/wavdec.c',
  'libavformat/avienc.c',
  'libavformat/avidec.c',
  'libavformat/aacdec.c',
  'libavformat/allformats.c',
  'libavformat/apetag.c',
  'libavcodec/aac_ac3_parser.c',
  'libavcodec/aac_parser.c',
  'libavcodec/aacadtsdec.c',
  'libavcodec/aacdec.c',
  'libavcodec/aacps_float.c',
  'libavcodec/aacpsdsp_float.c',
  'libavcodec/aacsbr.c',
  'libavcodec/aactab.c',
  'libavcodec/aandcttab.c',
  'libavcodec/allcodecs.c',
  'libavcodec/atrac.c',
  'libavcodec/atrac3.c',
  'libavcodec/atrac3plus.c',
  'libavcodec/atrac3plusdec.c',
  'libavcodec/atrac3plusdsp.c',
  'libavcodec/audioconvert.c',
  'libavcodec/avdct.c',
  'libavcodec/avfft.c',
  'libavcodec/avpacket.c',
  'libavcodec/avpicture.c',
  'libavcodec/bitstream.c',
  'libavcodec/bitstream_filter.c',
  'libavcodec/blockdsp.c',
  'libavcodec/bswapdsp.c',
  'libavcodec/cabac.c',
  'libavcodec/codec_desc.c',
  'libavcodec/d3d11va.c',
  'libavcodec/dct.c',
  'libavcodec/dct32_fixed.c',
  'libavcodec/dct32_float.c',
  'libavcodec/dirac.c',
  'libavcodec/dv_profile.c',
  'libavcodec/error_resilience.c',
  'libavcodec/exif.c',
  'libavcodec/faandct.c',
  'libavcodec/faanidct.c',
  'libavcodec/fdctdsp.c',
  'libavcodec/fft_fixed.c',
  'libavcodec/fft_fixed_32.c',
  'libavcodec/fft_float.c',
  'libavcodec/fft_init_table.c',
  'libavcodec/ffv1.c',
  'libavcodec/ffv1enc.c',
  'libavcodec/flvdec.c',
  'libavcodec/flvenc.c',
  'libavcodec/frame_thread_encoder.c',
  'libavcodec/golomb.c',
  'libavcodec/h263.c',
  'libavcodec/h263_parser.c',
  'libavcodec/h263data.c',
  'libavcodec/h263dec.c',
  'libavcodec/h263dsp.c',
  'libavcodec/h264.c',
  'libavcodec/h264_cabac.c',
  'libavcodec/h264_cavlc.c',
  'libavcodec/h264_direct.c',
  'libavcodec/h264_loopfilter.c',
  'libavcodec/h264_mb.c',
  'libavcodec/h264_parser.c',
  'libavcodec/h264_picture.c',
  'libavcodec/h264_ps.c',
  'libavcodec/h264_refs.c',
  'libavcodec/h264_sei.c',
  'libavcodec/h264_slice.c',
  'libavcodec/h264chroma.c',
  'libavcodec/h264dsp.c',
  'libavcodec/h264idct.c',
  'libavcodec/h264pred.c',
  'libavcodec/h264qpel.c',
  'libavcodec/hpeldsp.c',
  'libavcodec/huffman.c',
  'libavcodec/huffyuv.c',
  'libavcodec/huffyuvenc.c',
  'libavcodec/huffyuvencdsp.c',
  'libavcodec/idctdsp.c',
  'libavcodec/imdct15.c',
  'libavcodec/imgconvert.c',
  'libavcodec/intelh263dec.c',
  'libavcodec/ituh263dec.c',
  'libavcodec/ituh263enc.c',
  'libavcodec/jfdctfst.c',
  'libavcodec/jfdctint.c',
  'libavcodec/jpegtables.c',
  'libavcodec/jrevdct.c',
  'libavcodec/kbdwin.c',
  'libavcodec/latm_parser.c',
  'libavcodec/lossless_videodsp.c',
  'libavcodec/mathtables.c',
  'libavcodec/mdct_fixed.c',
  'libavcodec/mdct_fixed_32.c',
  'libavcodec/mdct_float.c',
  'libavcodec/me_cmp.c',
  'libavcodec/mjpegbdec.c',
  'libavcodec/mjpegdec.c',
  'libavcodec/motion_est.c',
  'libavcodec/mpeg12.c',
  'libavcodec/mpeg12data.c',
  'libavcodec/mpeg12dec.c',
  'libavcodec/mpeg4audio.c',
  'libavcodec/mpeg4video.c',
  'libavcodec/mpeg4video_parser.c',
  'libavcodec/mpeg4videodec.c',
  'libavcodec/mpeg4videoenc.c',
  'libavcodec/mpeg_er.c',
  'libavcodec/mpegaudio.c',
  'libavcodec/mpegaudio_parser.c',
  'libavcodec/mpegaudiodata.c',
  'libavcodec/mpegaudiodec_fixed.c',
  'libavcodec/mpegaudiodecheader.c',
  'libavcodec/mpegaudiodsp.c',
  'libavcodec/mpegaudiodsp_data.c',
  'libavcodec/mpegaudiodsp_fixed.c',
  'libavcodec/mpegaudiodsp_float.c',
  'libavcodec/mpegpicture.c',
  'libavcodec/mpegutils.c',
  'libavcodec/mpegvideo.c',
  'libavcodec/mpegvideo_enc.c',
  'libavcodec/mpegvideo_motion.c',
  'libavcodec/mpegvideo_parser.c',
  'libavcodec/mpegvideodata.c',
  'libavcodec/mpegvideodsp.c',
  'libavcodec/mpegvideoencdsp.c',
  'libavcodec/options.c',
  'libavcodec/parser.c',
  'libavcodec/pcm.c',
  'libavcodec/pixblockdsp.c',
  'libavcodec/profiles.c',
  'libavcodec/pthread.c',
  'libavcodec/pthread_frame.c',
  'libavcodec/pthread_slice.c',
  'libavcodec/qpeldsp.c',
  'libavcodec/qsv_api.c',
  'libavcodec/rangecoder.c',
  'libavcodec/ratecontrol.c',
  'libavcodec/raw.c',
  'libavcodec/rdft.c',
  'libavcodec/resample.c',
  'libavcodec/resample2.c',
  'libavcodec/rl.c',
  'libavcodec/sbrdsp.c',
  'libavcodec/simple_idct.c',
  'libavcodec/sinewin.c',
  'libavcodec/sinewin_fixed.c',
  'libavcodec/startcode.c',
  'libavcodec/tiff_common.c',
  'libavcodec/utils.c',
  'libavcodec/videodsp.c',
  'libavcodec/vorbis_parser.c',
  'libavcodec/x86/aacpsdsp_init.c',
  'libavcodec/x86/blockdsp_init.c',
  'libavcodec/x86/bswapdsp_init.c',
  'libavcodec/x86/constants.c',
  'libavcodec/x86/dct_init.c',
  'libavcodec/x86/fdct.c',
  'libavcodec/x86/fdctdsp_init.c',
  'libavcodec/x86/fft_init.c',
  'libavcodec/x86/h263dsp_init.c',
  'libavcodec/x86/h264_intrapred_init.c',
  'libavcodec/x86/h264_qpel.c',
  'libavcodec/x86/h264chroma_init.c',
  'libavcodec/x86/h264dsp_init.c',
  'libavcodec/x86/hpeldsp_init.c',
  'libavcodec/x86/huffyuvencdsp_mmx.c',
  'libavcodec/x86/idctdsp_init.c',
  'libavcodec/x86/lossless_videodsp_init.c',
  'libavcodec/x86/me_cmp_init.c',
  'libavcodec/x86/mpegaudiodsp.c',
  'libavcodec/x86/mpegvideo.c',
  'libavcodec/x86/mpegvideodsp.c',
  'libavcodec/x86/mpegvideoenc.c',
  'libavcodec/x86/mpegvideoencdsp_init.c',
  'libavcodec/x86/pixblockdsp_init.c',
  'libavcodec/x86/qpeldsp_init.c',
  'libavcodec/x86/sbrdsp_init.c',
  'libavcodec/x86/simple_idct.c',
  'libavcodec/x86/videodsp_init.c',
  'libavcodec/x86/xvididct_init.c',
  'libavcodec/xiph.c',
  'libavcodec/xvididct.c',
  'libswresample/audioconvert.c',
  'libswresample/dither.c',
  'libswresample/options.c',
  'libswresample/rematrix.c',
  'libswresample/resample.c',
  'libswresample/resample_dsp.c',
  'libswresample/swresample.c',
  'libswresample/swresample_frame.c',
  'libswresample/x86/audio_convert_init.c',
  'libswresample/x86/rematrix_init.c',
  'libswresample/x86/resample_init.c',
  'libswscale/alphablend.c',
  'libswscale/gamma.c',
  'libswscale/hscale.c',
  'libswscale/hscale_fast_bilinear.c',
  'libswscale/input.c',
  'libswscale/options.c',
  'libswscale/output.c',
  'libswscale/rgb2rgb.c',
  'libswscale/slice.c',
  'libswscale/swscale.c',
  'libswscale/swscale_unscaled.c',
  'libswscale/utils.c',
  'libswscale/vscale.c',
  'libswscale/x86/hscale_fast_bilinear_simd.c',
  'libswscale/x86/rgb2rgb.c',
  'libswscale/x86/swscale.c',
  'libswscale/x86/yuv2rgb.c',
  'libswscale/yuv2rgb.c',
  'libavutil/adler32.c',
  'libavutil/aes.c',
  'libavutil/aes_ctr.c',
  'libavutil/audio_fifo.c',
  'libavutil/avstring.c',
  'libavutil/base64.c',
  'libavutil/blowfish.c',
  'libavutil/bprint.c',
  'libavutil/buffer.c',
  'libavutil/camellia.c',
  'libavutil/cast5.c',
  'libavutil/channel_layout.c',
  'libavutil/color_utils.c',
  'libavutil/cpu.c',
  'libavutil/crc.c',
  'libavutil/des.c',
  'libavutil/dict.c',
  'libavutil/display.c',
  'libavutil/downmix_info.c',
  'libavutil/error.c',
  'libavutil/eval.c',
  'libavutil/fifo.c',
  'libavutil/file.c',
  'libavutil/file_open.c',
  'libavutil/fixed_dsp.c',
  'libavutil/float_dsp.c',
  'libavutil/frame.c',
  'libavutil/hash.c',
  'libavutil/hmac.c',
  'libavutil/imgutils.c',
  'libavutil/integer.c',
  'libavutil/intmath.c',
  'libavutil/lfg.c',
  'libavutil/lls.c',
  'libavutil/log.c',
  'libavutil/log2_tab.c',
  'libavutil/mastering_display_metadata.c',
  'libavutil/mathematics.c',
  'libavutil/md5.c',
  'libavutil/mem.c',
  'libavutil/murmur3.c',
  'libavutil/opt.c',
  'libavutil/parseutils.c',
  'libavutil/pixdesc.c',
  'libavutil/pixelutils.c',
  'libavutil/random_seed.c',
  'libavutil/rational.c',
  'libavutil/rc4.c',
  'libavutil/reverse.c',
  'libavutil/ripemd.c',
  'libavutil/samplefmt.c',
  'libavutil/sha.c',
  'libavutil/sha512.c',
  'libavutil/stereo3d.c',
  'libavutil/tea.c',
  'libavutil/threadmessage.c',
  'libavutil/time.c',
  'libavutil/timecode.c',
  'libavutil/tree.c',
  'libavutil/twofish.c',
  'libavutil/utils.c',
  'libavutil/x86/cpu.c',
  'libavutil/x86/fixed_dsp_init.c',
  'libavutil/x86/float_dsp_init.c',
  'libavutil/x86/lls_init.c',
  'libavutil/xga_font_data.c',
  'libavutil/xtea.c',
]

ffmpegIncludeDirs = [
  '.',
]

ffmpegCompileArgs = [
  '-D_ISOC99_SOURCE',
  '-D_FILE_OFFSET_BITS=64',
  '-D_LARGEFILE_SOURCE',
  '-D_POSIX_C_SOURCE=200112',
  '-D_XOPEN_SOURCE=600',
  '-DZLIB_CONST',
  '-DHAVE_AV_CONFIG_H',
  '-D__STDC_CONSTANT_MACROS',
  '-DPIC',
  '-fPIC'
]

# FFmpeg Dependency

 ffmpegDependency = declare_dependency(
  compile_args        : [  ffmpegCompileArgs ],
  link_args           : [  ],
  include_directories : include_directories(ffmpegIncludeDirs),
  sources             : [ ffmpegSrc ],
  dependencies        : [  
                        ]
 )

# Library

ffmpegLibrary = library('ffmpeg', dependencies: [ ffmpegDependency] )